# PSA-Hackathon

./: .gitignore  AGENTS.md  INTEGRATION_STATUS.md  README.md  agent_test_results.json  test-api.html
backend/: .coverage  .env  .env.example  AGENTS.md  README.md  conftest.py  package-lock.json  pyproject.toml  requirements.txt  test_agent_complete.py  test_agent_config.py  test_agent_http.py  test_agent_output.py  test_agent_requests.py  test_database.py
backend/src/: check_implementation.py
backend/src/app/: main.py
backend/src/app/agent/: sample_azure_openai_usage.py  sample_embedding.py  sample_langchain_azure_agent.py
backend/src/app/agent/course_recommendation_agent/: courses.json  dashboard.py  info_for_employer.py  main.py  system_prompt.py  tools.py
backend/src/app/agent/mentoring_agent/: QUICK_REFERENCE.md  README.md  WHERE_AND_HOW.md  agent.py  system_prompt.py  tools.py
backend/src/app/agent/well_being_agent/: agent.py  system_prompt.py  tools.py
backend/src/app/api/v1/: analytics.py  auth.py  dev.py  employees.py  marketplace.py  matching.py  mentoring.py  (+4 more)
backend/src/app/core/: config.py  db.py
backend/src/app/data/: sample_seed_data_for_mentoring.py  seed_data.py
backend/src/app/models/: __init__.py  pydantic_schemas.py  schemas.py
backend/src/app/services/: analytics_service.py  auth_service.py  course_service.py  employee_service.py  marketplace_service.py  mentor_match_request_service.py  mentoring_service.py  mentorship_service.py  wellbeing_service.py
backend/tests/: test_analytics_service.py  test_dev_api.py  test_mentor_requests_tdd.py
backend/tests/api/: test_analytics.py  test_mentoring.py  test_mentoring_database.py  test_mentoring_thread_safety.py
backend/tests/data/: test_seed_data.py
backend/tests/test_agent/: test_agent.py  test_tools.py
backend/tests/test_api/: test_agent_endpoint.py
backend/tests/test_repositories/: test_employee.py  test_mentorship_profile.py
backend/tests/test_services/: __init__.py  test_mentoring_service.py
(+89 files in other folders)
